Corrected layout issues with fact-service and image and copyright alignment

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -431,7 +431,7 @@ footer {
     /* border-bottom: 2px solid black; */
     padding-bottom: 40px;
     width: 880px;
-    height: 700px;
+    /* height: 700px; */
     display: flex;
     flex-direction: row;
     align-content: space-between;
@@ -441,7 +441,7 @@ footer {
 
 .services-card div {
     padding-bottom: 0px;
-    /* border-bottom: 1px solid black; */
+    border-bottom: 1px solid black;
     width: 420px;
     height: 205px;
     padding: 20px;
@@ -497,21 +497,36 @@ footer {
     margin: 0 60px 20px 0;
 } */
 
-.services-card .fact-service {
+.fact-service {
     display: flex;
-    margin-top: 30px;
+    border-top: 1px solid #000;
+    padding: 30px 0;
+    /* margin-top: 30px; */
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    /* height: 300px; */
+    height: 300px;
+    /* border: 1px solid red; */
 }
 
-.services-card .fact-service .facts {}
+.facts {
+    width: 49%;
+    /* margin-top: 30px; */
+    /* border: 1px solid blue; */
+}
 
-.services-card .fact-service .services-info-img {
-    width: 420px;
-    height: 300px;
-    margin-top: 10px;
+.facts h3 {
+    margin: 10px;
+}
+
+.facts p {
+    margin: 10px;
+}
+
+.facts ul li {
+    list-style: inside;
+    padding: 5px;
+    margin: 5px;
 }
 
 .services-info {
@@ -526,7 +541,7 @@ footer {
 }
 
 .footer-content {
-    display: flex;
-    align-self: baseline;
-    height: 20px;
+    text-align: center;
+    margin: 30px;
+    /* height: 20px; */
 }
